src/objects/Knowledge_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Perfectly Pure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puritan&apos;s Pride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitamin World</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Content_Owner__c</fullName>
        <label>Content Owner</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Topical_Category__c</fullName>
        <label>Topical Category</label>
        <picklist>
            <picklistValues>
                <fullName>Internal Use ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policies and Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing and Promotions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Knowledge Article</label>
    <pluralLabel>Knowledge Article</pluralLabel>
</CustomObject>